# proj-BCLlink-python-pyqt-eeg

./: .gitignore  .pre-commit-config.yaml  README.md  dashboard_module.py  pyproject.toml
config/: default.toml
scripts/: migrate_legacy_db.py  seed_admin.py  verify_phase3.py
src/neuropilot/: __init__.py  __main__.py  main.py
src/neuropilot/app/: acquisition_worker.py  auth_service.py  connection_config.py  eeg_record_service.py  eeg_session_coordinator.py  event_bus.py  ml_jobs.py  paradigm_engine.py  predictor.py  session_manager.py  training_dataset.py  transport_connect.py  trial_recorder.py
src/neuropilot/infra/: config.py  logger.py
src/neuropilot/ui/: login_dialog.py  main_window.py  theme.py
tasks/: current.md  decisions.md  phase1_current.md  progress.md
tasks/backlog/: phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md
tests/: conftest.py
tests/integration/: test_acquisition_demo.py  test_acquisition_worker.py  test_tcp_transport.py
tests/tools/: tcp_fake_server.py
tests/ui/: test_login_dialog.py  test_main_window_disconnect.py  test_status_panel.py  test_stimulus_area_fallback.py  test_stimulus_area_media_selection.py  test_subjects_page.py  test_task_media.py  test_task_phase_rendering.py
tests/unit/: test_auth_service.py  test_connection_config.py  test_csp.py  test_device_command.py  test_device_service.py  test_eeg_record_service.py  test_model_store.py  test_paradigm_engine.py  test_ring_buffer.py  test_smoke.py  test_subject_repo.py  test_synthetic_transport.py  test_trial_recorder.py
(+41 files in other folders)
